Blender overexposes Denoising Clean Pass in proportion to the amount of samples #61831

Closed
opened 2019-02-22 04:01:59 +01:00 by iszotic · 7 comments

System Information
Operating system: Ubuntu 18.04.1
Graphics card: RX 480

Blender Version

Broken:
blender-2.79-5d5070dd1232-linux-glibc224-x86_64
blender-2.80-9541ce2c261b-linux-glibc224-x86_64

Worked:

  • blender 2.79.6, 71211-111179beb0b-0thomas~bionic0, 2018-12-27
  • Enabling denoise for all types of lights, that nullifies the functionality of this pass
  • or dividing by a factor that is scene dependent

Short description of error
Denoising Clean Pass used to show the type of light that was disabled in the denoising panel correctly, now it overexposes erratically the pass with a multiplier of x128, or at least in the simple example of the blend file I appended, In the work that I noticed this bug the multiplier was around 5x

Exact steps for others to reproduce the error

  1. Make Sphere
  2. Set a SSS shader mixed with a diffuse shader
  3. Enable Denoising Passes, DiffCol, DiffInd, DiffCol passes, disable Diff direct and Diff indirect in denoising panel
  4. Render
  5. In compositor, Add DiffDir, DiffInd, then multiply with DiffCol, this image should be equal to Denoising Clean, but it's multiplied by x128
  6. In the example is multiplied by 1/128 to point out the overexposure.

Denoise clean bug.blend

**System Information** Operating system: Ubuntu 18.04.1 Graphics card: RX 480 **Blender Version** Broken: blender-2.79-5d5070dd1232-linux-glibc224-x86_64 blender-2.80-9541ce2c261b-linux-glibc224-x86_64 Worked: - blender 2.79.6, 71211-111179beb0b-0thomas~bionic0, 2018-12-27 - Enabling denoise for all types of lights, that nullifies the functionality of this pass - or dividing by a factor that is scene dependent **Short description of error** Denoising Clean Pass used to show the type of light that was disabled in the denoising panel correctly, now it overexposes erratically the pass with a multiplier of x128, or at least in the simple example of the blend file I appended, In the work that I noticed this bug the multiplier was around 5x **Exact steps for others to reproduce the error** 1) Make Sphere 2) Set a SSS shader mixed with a diffuse shader 3) Enable Denoising Passes, DiffCol, DiffInd, DiffCol passes, disable Diff direct and Diff indirect in denoising panel 4) Render 5) In compositor, Add DiffDir, DiffInd, then multiply with DiffCol, this image should be equal to Denoising Clean, but it's multiplied by x128 6) In the example is multiplied by 1/128 to point out the overexposure. [Denoise clean bug.blend](https://archive.blender.org/developer/F6683366/Denoise_clean_bug.blend)
Author

Added subscriber: @iszotic

Added subscriber: @iszotic

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Lukas Stockner was assigned by Sebastian Parborg 2019-02-22 13:07:12 +01:00

2.79 (02-15):
279.png

2.8 (todays build):
280.png

2.79 (02-15): ![279.png](https://archive.blender.org/developer/F6686349/279.png) 2.8 (todays build): ![280.png](https://archive.blender.org/developer/F6686351/280.png)
iszotic changed title from Blender overexposes erratically Denoising Clean Pass to Blender overexposes Denoising Clean Pass in proportion to the amount of samples 2019-03-06 19:32:10 +01:00
Author

Blender is multiplying the number of render samples to the denoise clean pass

32 samples, raw output of denoise clean pass
Clean Den 32-render pass.png
32 samples, (Diff Dir + Diff Ind) * Diff Col
Tru Diff 32-render pass.png

The zip file contains more examples of renders with 1 2 4 8 and 16 samples, and how the denoise clean pass gets more and more exposed,
Clean Bug.zip

Blender is multiplying the number of render samples to the denoise clean pass 32 samples, raw output of denoise clean pass ![Clean Den 32-render pass.png](https://archive.blender.org/developer/F6774232/Clean_Den_32-render_pass.png) 32 samples, (Diff Dir + Diff Ind) * Diff Col ![Tru Diff 32-render pass.png](https://archive.blender.org/developer/F6774236/Tru_Diff_32-render_pass.png) The zip file contains more examples of renders with 1 2 4 8 and 16 samples, and how the denoise clean pass gets more and more exposed, [Clean Bug.zip](https://archive.blender.org/developer/F6774249/Clean_Bug.zip)

This issue was referenced by blender/cycles@78087d61d9

This issue was referenced by blender/cycles@78087d61d9c9ef2369f538f8750b76d7bb5c59a8

This issue was referenced by 6503b4f90f

This issue was referenced by 6503b4f90f3336b22eff0bd0b61f86fd2cfd531b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61831
No description provided.