Fix T61831: Denoising Clean pass not scaled correctly with samples.